# 3dmm_cnn

./: CMakeLists.txt  LICENSE.txt  README.md  demo.py  input.txt  main.cpp  mod_struct.mat  trimBaselFace.py  utils.py
3DMM_model/: mod_struct_expr.mat  trimBaselFace.py
config/: CMakeLists.txt
demoCode/: input.txt  testBatchModel.py  testModel_PoseExpr.py  utils.py
modules/CvGl/: CMakeLists.txt  CvGl.vcproj  CvGl.vcxproj  FBRender.cpp  FBRender.h  Material.h  SimpleMesh.h  Texture.h  cvgl.h
modules/CvGl/Release/: CMakeCache.txt  Makefile  cmake_install.cmake
modules/PoseExpr/: CMakeLists.txt
modules/PoseExpr/include/: BaselFace.h  BaselFaceEstimator.h  DlibWrapper.h  FImRenderer.h  FTModel.h  FaceServices2.h  RenderModel.h  epnp.h  utility.h
modules/PoseExpr/src/: BaselFace.cpp  BaselFaceEstimator.cpp  DlibWrapper.cpp  FImRenderer.cpp  FTModel.cpp  FaceServices2.cpp  RenderModel.cpp  epnp.cpp  utility.cpp
